# aider-composer

./: .gitignore  .pre-commit-config.yaml  .vscodeignore  CHANGELOG.md  CONTRIBUTING.md  README.md  esbuild.js  global.d.ts  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: release.yml
docker/: README.md  compose.yml
server/: __init__.py  config.py  cors.py  events.py  io.py  main.py  pytest.ini  requirements.txt  session.py
server/tests/: __init__.py  conftest.py  test_events.py  test_io.py  test_main.py  test_mock_path.py  test_session.py
src/: aiderChatService.ts  extension.ts  types.ts  webViewProvider.ts
src/diffView/: InlineDiff.ts  diffEditor.ts  index.ts
src/docs/: DocsCrawler.ts  DocsService.ts
src/docs/crawlers/: BaseCrawler.ts  CheerioCrawler.ts  ChromiumCrawler.ts  DefaultCrawler.ts
src/docs/storage/: LanceDbStorage.ts
src/file/: configFileManager.ts  fileListManager.ts
src/generateCode/: generateCodeManager.ts
src/types/: vectordb.d.ts
src/utils/: fileWatcher.ts
ui/: package-lock.json  package.json
ui/src/: commandApi.ts  main.tsx  types.ts  vscode.ts
ui/src/components/: list.tsx  scrollArea.tsx
ui/src/stores/: initialDocs.ts  useChatStore.ts  useDocsStore.ts  useExtensionStore.ts  useSettingStore.ts
ui/src/views/chat/: ToggleGroup.tsx  chatFileList.tsx  chatMessageList.tsx  chatReferenceItemPreview.tsx  chatStatus.tsx  chatTextArea.tsx  snippetBlock.tsx  snippetReference.tsx
ui/src/views/setting/: config.ts  index.tsx
ui/src/views/welcome/: index.tsx
